core/roboconf-core/src/test/resources/configurations/invalid/graph-with-wildcards-and-errors.graph

vm {
	installer: target;
	children: database, app, messaging;
}

database {
	installer: puppet;
	exports: ip, port = 3306;
}

messaging {
	installer: chef;
	facets: f-messaging;
}

app {
	installer: bash;
	exports: ip, port = toto;
	
	# Nobody exports variables that start with "d-messaging."
	imports: database.*, d-messaging.*;
}

# Facets...
facet f-messaging {
	exports: queue = default;
}
